# zaframe

./: .gitignore  DEPLOY.md  README.md  docker-compose.yml  package-lock.json  render.yaml
backend/: .env.example  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  3e50488bde0d_add_services_and_orders.py  ba2c1fa16678_add_search_fields_to_studio_and_service.py  c4e8b2a1903f_studios_amenities_jsonb.py  d1a2b3c4d5e6_use_timestamptz_and_add_refresh_tokens.py  f2a9b3c1d0e1_add_bookings_reserved_until.py
backend/app/: main.py  seed.py
backend/app/api/: __init__.py  deps.py  webhooks.py
backend/app/api/v1/: __init__.py  auth.py  bookings.py  health.py  payments.py  services.py  slots.py  studios.py
backend/app/core/: __init__.py  config.py  database.py  datetime_utils.py  exceptions.py  logging_config.py  rate_limit.py  security.py  uow.py
backend/app/core/middleware/: __init__.py  logging_middleware.py
backend/app/core/repositories/: __init__.py  booking_repo.py  order_repo.py  refresh_token_repo.py  schedule_repo.py  service_repo.py  slot_repo.py  studio_repo.py  (+1 more)
backend/app/models/: __init__.py  booking.py  guest_session.py  mixins.py  order.py  refresh_token.py  schedule.py  service.py  slot.py  studio.py  user.py
backend/app/schemas/: __init__.py  auth.py  booking.py  guest_session.py  payment.py  search.py  service.py  slot.py  studio.py  user.py
backend/app/scripts/: seed_100_studios.py  seed_and_simulate.py
backend/app/services/: __init__.py  auth.py  booking.py  email.py  payment.py  service.py  slot.py  studio.py  user.py
backend/docs/: ARCHITECTURE_IMPROVEMENTS_PLAN.md
backend/tests/: TEST_COVERAGE_REPORT.md  conftest.py  test_api_auth.py  test_api_studios_slots_bookings.py  test_auth_service.py  test_payment_service.py  test_security.py  test_service_helpers.py  test_webhooks.py
(+120 files in other folders)
