[project]
name = "ZaFrame"
version = "0.1.0"
description = "Smart Booking System"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "pydantic-settings>=2.0.0",
    "pydantic[email]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "greenlet>=3.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "resend>=2.0.0",
    "stripe>=11.0.0",
    "slowapi>=0.1.9",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["app", "tests", "alembic"]
exclude = [".venv", "alembic/versions", "**/__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",
    "B008",  # FastAPI Depends() / Query() in defaults — framework idiom
    "E402",  # Late imports in seed.py / schema cycles
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.extend-per-file-ignores]
"app/models/**/*.py" = ["F821"]
"app/schemas/**/*.py" = ["F821"]
"tests/**/*.py" = ["SIM117"]
